# ACCESS_Resample_Weights

./: readme.md
src/: meson.build
src/AMSRE_orig/: make_gmatrix.f
src/SSMIS/: fd_l1b.f90  find_gains_ssmis.f90  process_L1a_to_native_Tbs.f90  ssmis_geolocation.f90
src/common/src/: gain_patterns.f90  simulation_param.f90
src/common/src/geoloc/: wgs84.f90
src/common/src/math/: math_routines.f90  pythag.f90  svd_invert.f90
src/common/src/resample/: resampling_types.f90
src/earth_grid/: amsr2_sensor_module.f90  amsr2_simulator_module.f90  amsre_l2_module_v04.f90  calc_g_everywhere.f90  fd_gain_targets.f90  fd_scvel_convert_to_j2000.f90  filename_routines.f90  filename_routines_v04.f90  find_89_resampling_weights_precompute_g_amsr2.f90  find_amsr2_source_gains.f90  find_amsr2_target_gains.f90  find_gains.f90  find_resampling_weights.f  find_resampling_weights.f90  find_resampling_weights_precompute_g_amsr2.f90  find_resampling_weights_precompute_g_amsr2_89.f90  find_resampling_weights_precompute_g_ssmi.f90  find_resampling_weights_precompute_g_ssmi_85.f90  find_resampling_weights_precompute_g_ssmis.f90  find_target_gains.f90  mwi_geolocation.f90  mwi_sensor_module.f  mwi_sensor_module.f90  mwi_simulator_module.f90  read_gobs_amsr2.f90  read_gobs_amsre.f90  read_gobs_mwi.f90  read_gobs_ssmis.f90  read_l1a_mwi.f90  ssmi_gains.f90  ssmis_gains.f90
src/mwi_orig/: check_fit.f  check_fit_adjust.f  find_neighbors.f  find_obs_gains.f  find_resampling_weights_adjust.f  find_resampling_weights_leakage.f  find_resampling_weights_leakage_smoothtest.f  find_target_gains.f  find_target_gains_adjust.f  invert_matrix.f  make_processing_weights.f  make_processing_weights_adjust.f  read_gobs_adjust.f  rsp_wt_draper.f  run_check_fit.f  run_check_fit_adjust.f  run_resample_wts.f  run_resample_wts_adjust.f  show_check_fit.f  show_check_fit_adjust.f  show_footprintsize_nadir.f  show_gains_on_earth.f  show_hsr_nrf.f  show_hsr_nrf_adjust.f  survey.f  test_geometry.f  test_xnorm.f
src/syspgm/: gzip.f  gzip_inflate.c  log.c  zlib.f90
